2014-05-21  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amtape.pl: Add relabeled case.

2014-05-12  Jean-Louis Martineau <martineau@zmanda.com>
	* packaging/rpm/amanda.spec.src: Add amazon.

2014-05-09  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/sendsize.c: Fix compiler warning.

2014-05-08  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/libs.m4: Search pkg-config in /opt/csw/bin.

2014-05-07  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/xfer-source-holding.c: Allow to rad s SPINT_DUMPFILE
	  from holding disk.

2014-05-07  Jean-Louis Martineau <martineau@zmanda.com>
	* packaging/sun-pkg/buildpkg: gmake is in /opt/csw/bin

2014-05-06  Jean-Louis Martineau <martineau@zmanda.com>
	* packaging/sun-pkg/buildpkg: Use /usr/csw/bin/gmake if available.

2014-05-05  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c (start_some_dumps): Fix if a disk is moved to
	  directq.

2014-05-05  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Interactivity/stdin.pm, server-src/amcheckdump.pl,
	  server-src/amfetchdump.pl, server-src/amvault.pl: Disable
	  interactivity if STDIN can't be read.

2014-05-01  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/dumper.c (xml_check_options): Set dumper_kencrypt.

2014-04-30  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/ScanInventory.pm: Reload the tapelist at every scan.

2014-04-30  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.c: Improve error message.

2014-04-29  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm: Fix lock.
	* perl/Amanda/Changer/robot.pm (_get_state): Return "failed".

2014-04-25  Jean-Louis Martineau <martineau@zmanda.com>
	* recover-src/uparse.y: Remove unused variable.

2014-04-25  Jean-Louis Martineau <martineau@zmanda.com>
	* amar-src/amar.c (amar_read_cb): Handle eof correctly.

2014-04-25  Jean-Louis Martineau <martineau@zmanda.com>