@@ -1,3 +1,9 @@
+2014-05-30  Jean-Louis Martineau <martineau@zmanda.com>
+	* installcheck/gnutar.pl: Fix for SunOS
+	* perl/Amanda/Interactivity.pm: Do not die if ->new return undef.
+	* perl/Amanda/Interactivity/stdin.pm: Add debugging if can't read
+	  STDIN.
+
 2014-05-21  Jean-Louis Martineau <martineau@zmanda.com>
 	* server-src/amtape.pl: Add relabeled case.
 
